--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+//firebase
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.hemant.notesapp"
+        applicationId "com.hemant.todonotesapp"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
@@ -18,18 +21,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            assets {
+                srcDirs 'src/main/assets', 'src/main/assets/'
+            }
+        }
+    }
 }
 
 dependencies {
-//    implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    implementation 'androidx.appcompat:appcompat:1.1.0'
-//    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-//    implementation 'com.google.android.material:material:1.1.0'
-//    testImplementation 'junit:junit:4.13'
-//    androidTestImplementation 'androidx.test:runner:1.2.0'
-//    implementation 'androidx.core:core-ktx:1.2.0'
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.71"
-//    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -42,9 +44,26 @@ dependencies {
     //kotlin dependency
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.71'
+    //
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    kapt 'android.arch.persistence.room:compiler:1.1.1'
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    //workmanager
+    implementation 'androidx.work:work-runtime:2.3.4'
+    //firebase
+    implementation 'com.google.firebase:firebase-analytics:17.4.0'
+    //firebase cloud messaging
+    implementation 'com.google.firebase:firebase-messaging:20.1.7'
+    //networking
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
+    //Viewpager
+    implementation 'androidx.viewpager:viewpager:1.0.0'
 
 
 }
+
 repositories {
     mavenCentral()
 }
